app/assets/styles/base/_global.css
body{
  font-family:'Roboto', sans-serif;
  color:#333;
}

img{
  max-width: 100%;
    width:100%;
  height:auto;
}

* {
    box-sizing: border-box;
}

a{
    color:#36C;
    text-decoration: none;
}

button{
    border:0;
    
    &:active{
        outline:none;
    }
}

.warning{
    color:$darkOrange !important;
}

.small{
    font-size:.85rem;
}

a img{
    width:100%;
}

.white-text{
    color:#FFF !important;
}

.inline-elements{
    a{
        margin-right:15px;
    }
}

.phone{
    color:$mainOrange !important;
}

